fix margin-top at Layout content on mobile devices

--- a/src/components/Projects/Project/Project.module.css
+++ b/src/components/Projects/Project/Project.module.css
@@ -11,3 +11,15 @@
 .Project img{
   width: 100%;
 }
+
+@media (max-width: 500px) {
+  .Project {
+    width: 100%;
+    margin: 10px;
+    display: block;
+    border: 1px solid #929292;
+    box-shadow: 3px 3px 8px #c2c2c2;
+    padding: 5px;
+    border-radius: 5px;
+  }
+}
