--- a/src/containers/Layout/Layout.module.css
+++ b/src/containers/Layout/Layout.module.css
@@ -1,3 +1,9 @@
 .Content {
-  margin-top: 72px;
+  margin-top: 62px;
+}
+
+@media (max-width: 500px) {
+  .Content {
+    margin-top: 12px;
+  }
 }
